--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "crawler": "^1.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "googleapis": "^27.0.0"
   }
 }
